# codemux

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  PLAN.md  PROJECT.md  README.md  STATUS.md  SUPERSET_UI_ANALYSIS.md  TESTING.md  WORKFLOW.md  codemux.desktop  components.json  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.setup.ts
.codemux/: config.json  observability.json
.opencode/: opencode.json
docs/: BROWSER_PLAN.md  CONTROL.md  INDEX.md  OPENFLOW_PLAN.md  VISUAL_NODE_GRAPH_IMPLEMENTATION.md
scripts/: check-deps.sh  copy-agent-browser.sh  patch-agent-browser.sh  vite-wrapper.sh
src-old/: App.svelte  (+1 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_browser.rs  agent_context.rs  ai.rs  auth.rs  branch_name.rs  browser.rs  cli.rs  commands.rs  control.rs  database.rs  diagnostics.rs  git.rs  github.rs  hooks.rs  indexing.rs  lib.rs  main.rs  mcp_server.rs  memory.rs  observability.rs  openflow.rs  os_input.rs  ports.rs  presets.rs  project.rs  scripts.rs  settings_sync.rs  stream_input.rs
src-tauri/src/commands/: ai.rs  auth.rs  branch_name.rs  browser.rs  database.rs  files.rs  git.rs  github.rs  mod.rs  openflow.rs  package_detect.rs  presets.rs  settings_sync.rs  update.rs  workspace.rs
src-tauri/src/config/: mod.rs  workspace_config.rs
src-tauri/src/execution/: mod.rs
src-tauri/src/openflow/: agent.rs  mod.rs  orchestrator.rs  prompts.rs
src-tauri/src/openflow/adapters/: claude.rs  mod.rs  opencode.rs
src-tauri/src/state/: mod.rs  state_impl.rs
src-tauri/src/terminal/: mod.rs
src-tauri/tests/: git_operations.rs  github_operations.rs
(+295 files in other folders)
