[package]
name = "codemux"
version = "0.1.7"
description = "The Agentic Development Environment for Builders"
authors = ["Zeus-Deus"]
license = "Elastic-2.0"
repository = "https://github.com/Zeus-Deus/codemux"
homepage = "https://codemux.org"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codemux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = { version = "2", default-features = false, features = ["xdg-portal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
toml = "1.0.3"
dirs = "6.0.0"
portable-pty = "0.8"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
notify-rust = "4"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
base64 = "0.22"
tempfile = "3"
tokio-tungstenite = "0.26"
futures-util = "0.3"
libc = "0.2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
hostname = "0.4"
url = "2"
urlencoding = "2"

[dev-dependencies]
mockito = "1"
serial_test = "3"
